--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <section class="hero">
       <div class="container">
         <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
-        <button class="button" type="button">Заказать услугу</button>
+        <button class="hero-button" type="button">Заказать услугу</button>
       </div>
     </section>
     <!-- Особенности -->
@@ -125,7 +125,7 @@
         <ul class="team-list list">
           <li class="team-item">
             <img width="270" src="./img/img1.jpg" alt="парень в очках с бородой в рубашкее">
-            <div class="team-info">
+            <div class="team-info-box">
               <h3 class="team-title">Игорь Демьяненко</h3>
               <p class="team-profession">Product Designer</p>
               <ul class="social-list">
@@ -162,7 +162,7 @@
           </li>
           <li class="team-item">
             <img width="270" src="./img/img2.jpg" alt="девушка в очках с длинными светлыми волосами">
-            <div class="team-info">
+            <div class="team-info-box">
               <h3 class="team-title">Ольга Репина</h3>
               <p class="team-profession">Frontend Developer</p>
               <ul class="social-list">
@@ -200,7 +200,7 @@
           </li>
           <li class="team-item">
             <img width="270" src="./img/img3.jpg" alt="парень в голубой рубашке">
-            <div class="team-info">
+            <div class="team-info-box">
               <h3 class="team-title">Николай Тарасов</h3>
               <p class="team-profession">Marketing</p>
               <ul class="social-list">
@@ -237,7 +237,7 @@
           </li>
           <li class="team-item">
             <img width="270" src="./img/img4.jpg" alt="парень в очках с бородой в футболке">
-            <div class="team-info">
+            <div class="team-info-box">
               <h3 class="team-title">Михаил Ермаков</h3>
               <p class="team-profession">UI Designer</p>
               <ul class="social-list">
